package domain.service.student617;

public class ExpediaTour extends ATour{
}
