package domain.service.student617;

public class HisTour  extends ATour{
}
