package domain.service.student617;

public interface IJob {

    void story();
    boolean meeting();
    void confirm();
}

