package domain.service.student617;

public interface ITask {

    void run();

    public enum TravelAgency {
        HIS,
        JTB,
        Expedia

      }

}
