package domain.service.student617;

public class JtbTour extends ATour {
}
