package domain.service.student617;

public class MyJob extends AJob {
}
